--- a/views/partials/_navigation.ejs
+++ b/views/partials/_navigation.ejs
@@ -34,8 +34,8 @@
             <a class="nav-link" href="/users/dashboard">Dashboard</a>
           </li>
           <% } %>
-          <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact</a>
+          <li class="nav-item <%= page_name === 'contact' && 'active' %>">
+            <a class="nav-link" href="/contact">Contact</a>
           </li>
         </ul>
         <% if(!userIN) { %>
