--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -81,6 +81,11 @@ if(user) { %> <% if(user.role === "student") { %>}
 <div id="overviews" class="section wb">
   <div class="container">
     <div class="row">
+      <% if(flashMessages) { %> <% if(flashMessages.success) { %>
+      <div class="alert alert-success"><%= flashMessages.success %></div>
+      <% } else if(flashMessages.error) { %>
+      <div class="alert alert-danger"><%= flashMessages.error %></div>
+      <% } %> <% } %>
       <!-- Modal Button -->
       <div class="col-lg-12 text-center">
         <button
@@ -119,6 +124,24 @@ if(user) { %> <% if(user.role === "student") { %>}
             </div>
             <div class="course-desc">
               <p><%= courses[i].description %></p>
+            </div>
+            <div class="clearfix">
+              <ul style="list-style-type: none">
+                <li style="float: left">
+                  <button class="btn btn-lg btn-primary rounded-0 text-white">
+                    <span>UPDATE</span>
+                  </button>
+                </li>
+                <li style="float: right">
+                  <a
+                    href="/courses/<%= courses[i].slug %>?_method=DELETE"
+                    onclick="return confirm('ARE YOU SURE')"
+                    class="btn btn-lg btn-danger rounded-0 text-white"
+                  >
+                    <span>DELETE</span>
+                  </a>
+                </li>
+              </ul>
             </div>
           </div>
         </div>
