--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,30 +1,19 @@
-<%- include("partials/_header"); %> <%- include("partials/_navigation"); %> <%
-if(user) { %> <% if(user.role === "student") { %>}
-
+<%- include('partials/_header'); %> <%- include('partials/_navigation'); %> <%
+if(user) { %> <% if(user.role==='student' ) { %>
 <div class="all-title-box">
   <div class="container text-center">
     <h1><%= user.name %><span class="m_1">STUDENT</span></h1>
   </div>
 </div>
-
 <div id="overviews" class="section wb">
   <div class="container">
     <div class="row">
-      <!-- Modal Button -->
-      <div class="col-lg-12 text-center">
-        <button
-          class="btn btn-lg btn-warning rounded-0 text-white"
-          href="#"
-          data-toggle="modal"
-          data-target="#addCourse"
-        >
-          <span>CREATE NEW COURSE</span>
-        </button>
-      </div>
       <div class="col-lg-12 blog-post-single">
         <div class="blog-author">
           <div class="author-bio">
-            <h3 class="author_name">COURSES ENROLLED BY: <%= user.name %></h3>
+            <h3 class="author_name">
+              <a href="#"> Courses Enrolled by: <%= user.name %></a>
+            </h3>
           </div>
         </div>
       </div>
@@ -41,9 +30,9 @@ if(user) { %> <% if(user.role === "student") { %>}
           <div class="course-br">
             <div class="course-title">
               <h2>
-                <a href="course-single.html" title=""
-                  ><%= user.courses[i].name %></a
-                >
+                <a href="/courses/<%= user.courses[i].slug %>" title=""
+                  ><%= user.courses[i].name %>
+                </a>
               </h2>
             </div>
             <div class="course-desc">
@@ -62,29 +51,27 @@ if(user) { %> <% if(user.role === "student") { %>}
           </div>
         </div>
       </div>
-      <% } %>
       <!-- end col -->
+      <% } %>
     </div>
     <!-- end row -->
   </div>
   <!-- end container -->
 </div>
 <!-- end section -->
-
-<% } %> <% if(user.role === "teacher") { %>}
-
+<% } %> <% if(user.role==='teacher' ) { %>
 <div class="all-title-box">
   <div class="container text-center">
     <h1><%= user.name %><span class="m_1">TEACHER</span></h1>
   </div>
 </div>
-
 <div id="overviews" class="section wb">
   <div class="container">
     <div class="row">
-      <% if(flashMessages) { %> <% if(flashMessages.success) { %>
+      <% if (flashMessages) { %> <% if (flashMessages.success) { %>
       <div class="alert alert-success"><%= flashMessages.success %></div>
-      <% } else if(flashMessages.error) { %>
+
+      <% } else if (flashMessages.error) { %>
       <div class="alert alert-danger"><%= flashMessages.error %></div>
       <% } %> <% } %>
       <!-- Modal Button -->
@@ -101,7 +88,7 @@ if(user) { %> <% if(user.role === "student") { %>}
       <div class="col-lg-12 blog-post-single">
         <div class="blog-author">
           <div class="author-bio">
-            <h3 class="author_name">Courses From <%= user.name %></h3>
+            <h3 class="author_name">COURSE FROM: <%= user.name %></h3>
           </div>
         </div>
       </div>
@@ -130,9 +117,9 @@ if(user) { %> <% if(user.role === "student") { %>}
               <ul style="list-style-type: none">
                 <li style="float: left">
                   <button
-                    class="btn btn-lg btn-primary rounded-0 text-white"
+                    class="btn btn-primary rounded-0 text-white"
                     data-toggle="modal"
-                    data-target="#updateCourse<%= courses[i].id %>"
+                    data-target="#updateCourse<%= courses[i]._id %>"
                   >
                     <span>UPDATE</span>
                   </button>
@@ -141,10 +128,9 @@ if(user) { %> <% if(user.role === "student") { %>}
                   <a
                     href="/courses/<%= courses[i].slug %>?_method=DELETE"
                     onclick="return confirm('ARE YOU SURE')"
-                    class="btn btn-lg btn-danger rounded-0 text-white"
+                    class="btn btn-danger rounded-0 text-white"
+                    ><span>DELETE</span></a
                   >
-                    <span>DELETE</span>
-                  </a>
                 </li>
               </ul>
             </div>
@@ -155,7 +141,7 @@ if(user) { %> <% if(user.role === "student") { %>}
       <!-- UPDATE Modal -->
       <div
         class="modal fade"
-        id="updateCourse<%= courses[i].id %>"
+        id="updateCourse<%= courses[i]._id %>"
         tabindex="-1"
         role="dialog"
         aria-labelledby="myModalLabel"
@@ -179,13 +165,12 @@ if(user) { %> <% if(user.role === "student") { %>}
                         <input
                           type="text"
                           name="name"
+                          value="<%= courses[i].name %>"
                           class="form-control"
                           placeholder="Course Name"
-                          value="<%= courses[i].name %>"
                         />
                       </div>
                     </div>
-
                     <div class="form-group">
                       <div class="col-sm-12">
                         <input
@@ -245,14 +230,13 @@ if(user) { %> <% if(user.role === "student") { %>}
           </div>
         </div>
       </div>
-
       <% } %>
     </div>
     <!-- end row -->
   </div>
   <!-- end container -->
 </div>
-
+<!-- end section -->
 <!-- ADD Modal -->
 <div
   class="modal fade"
@@ -278,7 +262,6 @@ if(user) { %> <% if(user.role === "student") { %>}
                   />
                 </div>
               </div>
-
               <div class="form-group">
                 <div class="col-sm-12">
                   <input
@@ -336,5 +319,59 @@ if(user) { %> <% if(user.role === "student") { %>}
     </div>
   </div>
 </div>
-
-<% } %> <% } %> <%- include("partials/_footer"); %>
+<% } %> <% if(user.role==='admin' ) { %>
+<div class="all-title-box">
+  <div class="container text-center">
+    <h1><%= user.name %><span class="m_1">ADMIN</span></h1>
+  </div>
+</div>
+<div id="overviews" class="section wb">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12 blog-post-single">
+        <div class="blog-author">
+          <div class="author-bio">
+            <h3 class="author_name">
+              <a href="#"> Courses Enrolled by: <%= user.name %></a>
+            </h3>
+          </div>
+        </div>
+      </div>
+      <!-- end col -->
+    </div>
+    <!-- end row -->
+    <div class="row mt-5">
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">ID#</th>
+            <th scope="col">Email</th>
+            <th scope="col">Role</th>
+            <th scope="col">Delete</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% for (let i=0; i< users.length; i++) { %>
+          <tr>
+            <th scope="row"><%=users[i]._id %></th>
+            <td><%=users[i].email %></td>
+            <td><%=users[i].role %></td>
+            <td>
+              <a
+                href="/users/<%= users[i]._id %>?_method=DELETE"
+                onclick="return confirm('ARE YOU SURE')"
+                class="btn btn-danger rounded-0 text-white"
+                ><span>DELETE</span></a
+              >
+            </td>
+          </tr>
+          <% } %>
+        </tbody>
+      </table>
+    </div>
+    <!-- end row -->
+  </div>
+  <!-- end container -->
+</div>
+<!-- end section -->
+<% } %> <% } %> <%- include('partials/_footer'); %>
